--- a/develop/postgres.html
+++ b/develop/postgres.html
@@ -203,7 +203,7 @@ section in your config file to match the following lines:</p>
   args:
     user: &lt;user&gt;
     password: &lt;pass&gt;
-    database: &lt;db&gt;
+    dbname: &lt;db&gt;
     host: &lt;host&gt;
     cp_min: 5
     cp_max: 10
